changed css breakpoint for bigger screen, to avoid window going behind the desktop viewport

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -207,14 +207,14 @@ svg.loading-spin {
   top: 5px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1340px) {
   .ReactTable .rt-th, .ReactTable .rt-td {
     padding: 2px 5px;
   }
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1340px) {
   h1 {
     font-size: 2rem;
   }
