--- a/app/components/PaginaNew.css
+++ b/app/components/PaginaNew.css
@@ -20,7 +20,7 @@
   height: 200px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1340px) {
   .bottonePercentuale {
     padding: 10px;
     width: 100px;
